--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "reactjs-popup": "^1.3.2"
+    "reactjs-popup": "^1.3.2",
+    "recharts": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
