--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "moment": "^2.23.0",
@@ -18,7 +18,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "reactjs-popup": "^1.3.2",
-    "recharts": "^1.4.2"
+    "recharts": "^1.4.2",
+    "semantic-ui-react": "^0.87.3"
   },
   "scripts": {
     "start": "react-scripts start",
